--- a/WebMRPO/css/StylePageTheory.css
+++ b/WebMRPO/css/StylePageTheory.css
@@ -4,24 +4,24 @@
 
 #workspace {
     background-color: #FFFAF0;
+    height: 3000px;
     width: 80%;
     position: absolute;
     top: 20px;
     left: 10%;
     right: 10%;
-    height: 1000px;
 }
 
 #header {
     text-align: right;
-    height: 15%;
+    height: 200px;
 }
 
 #menu {
     text-align: center;
     position: absolute;
-    top: 15%;
-    height: 10%;
+    top: 200px;
+    height: 25px;
     width: 100%;
     left: 0px;
     margin-bottom: 74px;
@@ -30,7 +30,7 @@
 #content {
     width: 100%;
     position: absolute;
-    top: 25%;
+    top: 300px;
     height: 70%;
 }
 
