--- a/WebMRPO/css/StylePageTheory.css
+++ b/WebMRPO/css/StylePageTheory.css
@@ -55,7 +55,7 @@
     width: 100%;
     position: absolute;
     top: 90%;
-    height: 15%;
+    height: 40px;
 }
 
 .buttonMenu {
@@ -86,3 +86,4 @@ hr {
     .buttonMenu.buttonHeader {
         padding: 2px 5px;
     }
+
