--- a/WebMRPO/css/StylePageTheory.css
+++ b/WebMRPO/css/StylePageTheory.css
@@ -35,11 +35,12 @@
 }
 
 #theorylist {
-    border-right:solid;
-    border-width:1px;
+    border-right: solid;
+    border-width: 1px;
     width: 32%;
     position: absolute;
     height: 100%;
+    overflow-y: auto;
 }
 
 #text {
